feat: unify asynchronous media routes
